Added homepage bg image

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 </nav>
     </header>
     <div class="image-container">
-        <img src="https://i.ibb.co/zPVcbrs/Whats-App-Image-2024-03-09-at-11-01-32.jpg" alt="">
+        <img src="homepage.jpeg" alt="">
     </div>
     
     <main>
